--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,11 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Email-FolderType-Net
-version:      1.01
+version:      1.02
 version_from: lib/Email/FolderType/Net.pm
 installdirs:  site
 requires:
-    Email::LocalDelivery::Register: 
+    Email::FolderType::Register:   
     Test::More:                    0.47
     URI:                           
 
