--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,13 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Email-FolderType-Net
-version:      1.02
+version:      1.03
 version_from: lib/Email/FolderType/Net.pm
 installdirs:  site
 requires:
-    Email::FolderType::Register:   
+    Email::FolderType:             0.8
     Test::More:                    0.47
-    URI:                           
+    URI:                           1.35
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.17
