Import of RJBS/Email-FolderType-Net-1.041 from CPAN.
gitpan-cpan-distribution: Email-FolderType-Net
gitpan-cpan-version:      1.041
gitpan-cpan-path:         RJBS/Email-FolderType-Net-1.041.tar.gz
gitpan-cpan-author:       RJBS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,16 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Email-FolderType-Net
-version:      1.04
-version_from: lib/Email/FolderType/Net.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                Email-FolderType-Net
+version:             1.041
+abstract:            recognize folder types for network based message protocols
+license:             perl
+generated_by:        ExtUtils::MakeMaker version 6.32
+distribution_type:   module
+requires:     
     Email::FolderType:             0.8
     Test::More:                    0.47
     URI:                           1.35
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
+    version: 1.2
+author:
+    - Casey West <casey@geeknest.com>
